Benefiairio e Contrato test updated